DBC Update dbc domain structure for 7.3.5